--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ html {
     font-size: 11px;
 }
 
+body {
+    height: 100%;
 
-
+}
 
 .nav {
     display: flex;
@@ -49,32 +51,48 @@ html {
     padding: 15px;
 }
 
+.content-wrap{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
 .left-menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-family: 'nanumsquare';
     font-size: 20px;
     background: white;
-    height: 100%;
+    height:100vh;
     width: 18rem;
+    margin: 0;
 }
+
 
 .left-menu-button-wrap {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     width: inherit;
-    height: inherit;
+    height: 100%;
     text-align: center;
     padding-top: 2rem;
-    border: 1px lightgray solid;   
+}
+
+
+.left-menu-button-top {
+    font-weight: 900;
+    padding: 1rem;
+    font-size: 30px;
+    color: #123277;
+    padding-bottom: 2rem;
+
 }
 
 .left-menu-button {
     font-weight: 900;
     padding: 1rem;
 }
-.left-menu-button a {
+.left-menu-button-wrap a {
     color: #123277;
 }
 
@@ -86,4 +104,44 @@ html {
     align-items: center;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
+}
+
+.article-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items:center;
+    width: auto;
+    height:fit-content;
+    border-left: 1px lightgray solid;
+}
+
+.article {
+    padding: 20px;
+    width: 60%;
+}
+
+.article h1{
+    font-family: 'nanumsquare';
+    padding-bottom: 0.7rem;
+}
+
+.article hr{
+    width: 30rem;
+    height: 0.3rem;
+    border: none;
+    background-color: black ;
+    
+}
+
+.article p{
+    font-family: sans-serif;
+    font-size: 1.2rem;
+    padding-top: 1rem;
+}
+
+.article img {
+    padding-top: 2rem;
+    width: 70%;
 }
