--- a/style.css
+++ b/style.css
@@ -124,7 +124,8 @@ body {
 }
 
 .article h1{
-    font-family: 'nanumsquare';
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight:900;
     padding-bottom: 0.7rem;
 }
 
@@ -161,6 +162,15 @@ body {
     width: 50%;
 }
 
+#profile {
+    width: 30rem;
+}
+
 .article video {
     padding-top: 2rem;
+}
+
+#contact {
+    font-family:sans-serif;
+    font-weight: bold;
 }
