--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* 데스크탑 */
+
 *{
     box-sizing: border-box;
     text-decoration: none;
@@ -105,6 +107,14 @@ body {
     font-family: 'Press Start 2P', cursive;
 }
 
+#greeting {
+    font-size: 7rem;
+}
+
+#pixel-welcome {
+    width: 40%;
+}
+
 .article-wrap {
     display: flex;
     flex-direction: column;
@@ -174,3 +184,201 @@ body {
     font-family:sans-serif;
     font-weight: bold;
 }
+
+
+
+/* 태블릿 */
+@media screen and (max-width:1023px) {
+    
+}
+
+/* 모바일 */
+@media screen and (max-width:767px) {
+    *{
+        box-sizing: border-box;
+        text-decoration: none;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    
+    a { text-decoration: none; color: white; }
+    a:visited { text-decoration: none; }
+    a:hover { text-decoration: none; }
+    a:focus { text-decoration: none; }
+    a:hover, a:active { text-decoration: none; }
+    
+    html {
+        font-size: 11px;
+    }
+    
+    body {
+        height: 100%;
+    
+    }
+    
+    .nav {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        overflow: hidden;
+        width: 100%;
+        height: 7%;
+        background: #123277;
+        color: white;
+        font-family: 'nanumsquare';
+    }
+    
+    .logo{
+        font-size: 2rem;
+        font-weight: 900;
+        padding: 2rem;
+        margin-right: auto;
+    }
+    
+    .button-wrap {
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    .button {
+        display: none;
+        font-size: 1rem;
+        font-weight: 900;
+        padding: 0.5rem;
+    }
+    
+    .mo-button {
+        font-size: medium;
+        font-weight: 900;
+    }
+
+    .content-wrap{
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+    }
+    
+    .left-menu {
+        display: flex;
+        flex-direction: row;
+        font-family: 'nanumsquare';
+        font-size: 20px;
+        background: white;
+        height:100vh;
+        width: 18rem;
+        margin: 0;
+    }
+    
+    .left-menu-button-wrap {
+        display: flex;
+        flex-direction: column;
+        width: inherit;
+        height: 100%;
+        text-align: center;
+        padding-top: 2rem;
+    }
+    
+    .left-menu-button-top {
+        font-weight: 900;
+        padding: 1rem;
+        font-size: 30px;
+        color: #123277;
+        padding-bottom: 2rem;
+    
+    }
+    
+    .left-menu-button {
+        font-weight: 900;
+        padding: 1rem;
+    }
+    
+    .left-menu-button-wrap a {
+        color: #123277;
+    }
+    
+    .welcome {
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: 'Press Start 2P', cursive;
+    }
+    
+    #greeting {
+        font-size: 3rem;
+    }
+
+    .article-wrap {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content:center;
+        align-items:flex-start;
+        width: 100%;
+        height:fit-content;
+        border-left: 1px lightgray solid;
+    }
+    
+    .article {
+        padding: 30px;
+        padding-left: 60px;
+        width: 60%;
+        height: fit-content;
+    }
+    
+    .article h1{
+        font-family: 'Noto Sans KR', sans-serif;
+        font-weight:900;
+        padding-bottom: 0.7rem;
+    }
+    
+    .article hr{
+        width: 30rem;
+        height: 0.3rem;
+        border: none;
+        background-color: black ;
+        
+    }
+    
+    .article p{
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 1.4rem;
+        padding-top: 1rem;
+        line-height: 2.3rem;
+    }
+    
+    .article pre {
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 1.4rem;
+        padding-top: 1rem;
+        line-height: 2.3rem;
+    }
+    
+    .article li {
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 1.4rem;
+        padding-top: 1rem;
+    }
+    
+    .article img {
+        padding-top: 2rem;
+        width: 50%;
+    }
+    
+    #profile {
+        width: 30rem;
+    }
+    
+    .article video {
+        padding-top: 2rem;
+    }
+    
+    #contact {
+        font-family:sans-serif;
+        font-weight: bold;
+    } 
+}
+
