--- a/style.css
+++ b/style.css
@@ -309,15 +309,14 @@ body {
         flex-direction: column;
         flex-wrap: wrap;
         justify-content:center;
-        align-items:flex-start;
+        align-items:center;
         width: 100%;
         height:fit-content;
     }
     
     .article {
         padding: 30px;
-        padding-left: 60px;
-        width: 60%;
+        width: 100%;
         height: fit-content;
     }
     
@@ -328,7 +327,7 @@ body {
     }
     
     .article hr{
-        width: 30rem;
+        width: 100%;
         height: 0.3rem;
         border: none;
         background-color: black ;
@@ -337,7 +336,7 @@ body {
     
     .article p{
         font-family: 'Noto Sans KR', sans-serif;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         padding-top: 1rem;
         line-height: 2.3rem;
     }
