--- a/style.css
+++ b/style.css
@@ -137,6 +137,13 @@ body {
     height: fit-content;
 }
 
+.article p span {
+    width: 100%;
+    margin-bottom: 0.7rem;
+    display: flex;
+    flex-direction: column;
+}
+
 .article h1{
     font-family: 'Noto Sans KR', sans-serif;
     font-weight:900;
@@ -315,7 +322,11 @@ body {
     }
     
     .article {
-        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 3rem;
+        padding-bottom: 0;
         width: 100%;
         height: fit-content;
     }
@@ -335,10 +346,36 @@ body {
     }
     
     .article p{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
         font-family: 'Noto Sans KR', sans-serif;
         font-size: 1.2rem;
         padding-top: 1rem;
         line-height: 2.3rem;
+    }
+
+    .field-of-study {
+        display: flex;
+        flex-direction: row;
+        align-content: left;
+    }
+    
+    .field-of-study span {
+        width: 100%;
+    }
+
+    .article p span {
+        width: 100%;
+        margin-bottom: 0.7rem;
+
+    }
+
+    .article p img {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .article pre {
@@ -363,10 +400,6 @@ body {
         width: 30rem;
     }
     
-    .article video {
-        padding-top: 2rem;
-    }
-
     iframe {
         width:fit-content;
     }
