commit responsive web

--- a/style.css
+++ b/style.css
@@ -192,8 +192,9 @@ body {
 }
 
 #contact {
-    font-family:sans-serif;
-    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;    
 }
 
 
