--- a/style.css
+++ b/style.css
@@ -202,6 +202,23 @@ body {
     justify-content: flex-start;    
 }
 
+.topBtn {
+    cursor:pointer;
+    position: fixed;
+    top: 90%;
+    right: 5%;
+    z-index: 9999;
+    width: 5rem;
+    height: 2rem;
+    font-weight: 600;
+    text-align: center;
+    line-height: 2rem;
+    background: #123277;
+    color: antiquewhite;
+
+
+}
+
 
 
 /* 태블릿 */
