--- a/style.css
+++ b/style.css
@@ -208,15 +208,14 @@ body {
     top: 90%;
     right: 5%;
     z-index: 9999;
-    width: 5rem;
+    width: 3rem;
     height: 2rem;
     font-weight: 600;
     text-align: center;
     line-height: 2rem;
     background: #123277;
     color: antiquewhite;
-
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
