--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     height: 50px;
     background: #123277;
     color: white;
-    font-family: 'nanumsquare';
+    font-family: 'nanumsquare', sans-serif;
 }
 
 .logo{
@@ -70,7 +70,7 @@ body {
 .left-menu {
     display: flex;
     flex-direction: row;
-    font-family: 'nanumsquare';
+    font-family: 'nanumsquare', sans-serif;
     font-size: 20px;
     background: white;
     height:100vh;
@@ -264,7 +264,7 @@ body {
         height: 7%;
         background: #123277;
         color: white;
-        font-family: 'nanumsquare';
+        font-family: 'nanumsquare', sans-serif;
     }
     
     .logo{
@@ -303,7 +303,7 @@ body {
     .left-menu {
         display: none;
         flex-direction: row;
-        font-family: 'nanumsquare';
+        font-family: 'nanumsquare', sans-serif;
         font-size: 20px;
         background: white;
         height:100vh;
@@ -327,7 +327,7 @@ body {
         justify-content: center;
         align-items: center;
         text-align: center;
-        font-family: 'Press Start 2P', cursive;
+        font-family: 'Press Start 2P', sans-serif;
     }
     
     #greeting {
