--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
     text-align: center;
     line-height: 2rem;
     background: #123277;
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
 }
 
