--- a/style.css
+++ b/style.css
@@ -352,6 +352,10 @@ body {
 
     #pixel-welcome {
         width: 20%;
+        animation-duration: 2s;
+        animation-name: slide;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
     }
 
     .article-wrap {
