--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
 }
 
 #pixel-welcome {
-    width: 20%;
+    width: 15%;
     animation-duration: 0.3s;
     animation-name: slide;
     animation-timing-function: linear;
@@ -230,6 +230,15 @@ body {
     background: #123277;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.dl-btn {
+    width: 30rem;
+    height: 8rem;
+    background-color: #123277;
+    color: white;
+    font-weight: bolder;
+    font-size: x-large;
 }
 
 @keyframes slide {
